{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 709,
  "lineage": "f0b6d692-7aad-9484-d252-4f87d7645883",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "remote_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:security-group/sg-0ccff1eefd48311ab",
            "description": "Allow remote SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccff1eefd48311ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-cluster-remote-access20240929142025237800000005",
            "name_prefix": "demo-cluster-remote-access",
            "owner_id": "132172135366",
            "revoke_rules_on_delete": false,
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "EKS",
              "Name": "demo-cluster-remote-ssh",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "EKS",
              "Name": "demo-cluster-remote-ssh",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7ca8b889cfa29c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:security-group/sg-03757b59842da5a5c",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03757b59842da5a5c",
            "ingress": [],
            "name": "demo-cluster-cluster-20240929142025233900000001",
            "name_prefix": "demo-cluster-cluster-",
            "owner_id": "132172135366",
            "revoke_rules_on_delete": false,
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "EKS",
              "Name": "demo-cluster-cluster",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "EKS",
              "Name": "demo-cluster-cluster",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7ca8b889cfa29c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:security-group/sg-0ae747dc17e7218d8",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0ae747dc17e7218d8",
            "ingress": [],
            "name": "demo-cluster-node-20240929142025236100000004",
            "name_prefix": "demo-cluster-node-",
            "owner_id": "132172135366",
            "revoke_rules_on_delete": false,
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "EKS",
              "Name": "demo-cluster-node",
              "kubernetes.io/cluster/demo-cluster": "owned"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "EKS",
              "Name": "demo-cluster-node",
              "kubernetes.io/cluster/demo-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7ca8b889cfa29c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1639760428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03757b59842da5a5c",
            "security_group_rule_id": "sgr-0b6eb9d69d166e60d",
            "self": false,
            "source_security_group_id": "sg-0ae747dc17e7218d8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3940717627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-09c04b1bd3a629d78",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-105134303",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-03747af4c8b97b8ae",
            "self": false,
            "source_security_group_id": "sg-03757b59842da5a5c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-907457113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-0fda7b05d562e065e",
            "self": false,
            "source_security_group_id": "sg-03757b59842da5a5c",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4283749839",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-03344ac1e9c4dc6a9",
            "self": false,
            "source_security_group_id": "sg-03757b59842da5a5c",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3960007150",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-09ca2dec0b597403c",
            "self": false,
            "source_security_group_id": "sg-03757b59842da5a5c",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2292832805",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-038e991a8670f2e8c",
            "self": false,
            "source_security_group_id": "sg-03757b59842da5a5c",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3989045366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-0f26ecb980d63dc6a",
            "self": false,
            "source_security_group_id": "sg-03757b59842da5a5c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3948508207",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-0c719a00f50d7518d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2562341840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-0be500997ea6e77e4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1021679679",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ae747dc17e7218d8",
            "security_group_rule_id": "sgr-015506af22fdca759",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}